fixed events not showing on main menu and added button styling

--- a/style.scss
+++ b/style.scss
@@ -2,7 +2,7 @@
 Theme Name: Translator
 Description: Awesome Translator Theme 
 Author: Ben
-Template: twentyeleven
+
 */
 
 @import url("http://fonts.googleapis.com/css?family=Montserrat");
@@ -100,7 +100,14 @@ a {
 		color: white;
 	}
 }
-
+.button{
+	background: $orange;
+	color: #fff !important;
+	padding: 0.2em 0.5em;
+	border-top: 1px solid lighten($orange, 25);
+	border-left: 1px solid lighten($orange, 25);	
+	@include box-shadow(1px, 1px, 0, $light-gray);
+}
 /* Tabs */
 .tab-nav {
 	li{
@@ -385,6 +392,7 @@ $header-width: 965px + ($header-margin * 2);
 			margin-top: 0;
 		}
 	}
+	.more{padding: 22px 0;}
 	.plus{
 		@include box-shadow-inset(1px, 1px, 2px, rgba(255, 255, 255, 0.75) );	
 		display: inline-block;
